--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@color/splashBgColor"/>
     <item>
         <bitmap
-            android:gravity="fill_vertical"
+            android:gravity="center"
             android:src="@drawable/splash" />
     </item>
 </layer-list>
